# frappe-platform

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
.claude/: claude-memory-bank.md
.claude/commands/: init-memory-bank.md
.claude/commands/workflow/: execute.md  plan.md  understand.md  update-memory.md
.clinerules/: instructions.md  memory-bank.md
.memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
.memory-bank/plans/: 2026-06-10-platform-layer-plan.md
docs/dokploy/: dokploy-deployment.md
docs/erpnext/: operations-runbook.md
docs/nomad/: nomad-upgrade-runbook.md
docs/superpowers/plans/: 2026-06-11-erpnext-backup-restore-stg.md
platform/: .env.example  .env.prod.example  .env.stg.example  Containerfile  Dockerfile  Makefile  apps.json  docker-compose.dev.yml
platform/cli/: pyproject.toml
platform/cli/org_bench/: build.py  deploy.py  dev.py
platform/cli/org_bench.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
platform/docs/: developer-workflow.md
platform/dokploy/: .env.example  compose.env.example  docker-compose.yml  dokploy.yml
platform/nginx/: dev.conf
platform/nomad/: frappe.nomad.hcl
platform/nomad/volumes/: frappe-sites.hcl  mariadb-data.hcl  redis-cache-data.hcl  redis-queue-data.hcl
platform/resources/: main-entrypoint.sh  start.sh
platform/scripts/: bootstrap.sh  configure-site.sh  dokploy-deploy.sh  mariadb.cnf
platform/traefik/: routes.yml
references/mikrotik/: rule.env
